# log3py

./: LICENSE  README.md  pyproject.toml
log3py/: constants.py  log3py.py  log_utils.py
log3py/formatters/: json_formatter.py  resolvers.py
log3py/resources/: pretty_good_default_layout.json
